arreglo el responsibe

--- a/style.css
+++ b/style.css
@@ -19,6 +19,10 @@ body {
     padding: 20px 0 20px 0;
     box-shadow: 1rem 1rem 1rem 0 #1B6B6B;
     margin: 3rem auto;
+    /* text-align: center; */
+}
+
+.feedback {
     text-align: center;
 }
 
@@ -109,14 +113,13 @@ body {
 
 .inputs-conteiner {
     text-align: center;
-    text-transform: uppercase;
     font-size: 1.2rem;
     font-weight: 600;
 }
 
 .input-settings {
-    width: 25%;
-    display: block;
+    width: 60%;
+    /* display: block; */
     margin: auto;
     border: none;
     background-color: transparent;
@@ -159,14 +162,34 @@ input[type=number] {
 
 /* responsive */
 
-body {
-    flex-direction: column;
-    /* padding: 1rem; */
-}
-
-.conteiner-feedback,
-.pomodoro-conteiner,
-.conteiner-task {
-    width: 350px;
-    margin-top: 1rem;
+@media screen and (max-width: 900px) {
+    body {
+        flex-direction: column;
+        /* padding: 1rem; */
+    }
+    .conteiner-feedback,
+    .pomodoro-conteiner,
+    .conteiner-task {
+        padding: 1rem;
+        width: 350px;
+        margin-top: 1rem;
+    }
+    .conteiner-settings {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+    }
+    .inputs-conteiner {
+        text-align: center;
+        font-size: .95rem;
+        font-weight: 600;
+    }
+    .input-settings {
+        width: 90%;
+        text-align: center;
+        margin: auto;
+        border: none;
+        background-color: transparent;
+        font-size: 1.5rem;
+    }
 }
